Added Flex tests
Cointains Flex files that were used to test the way Flex runs in WSL as well as a way to broaden my study of it.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,9 @@ dist
 .vscode/settings.json
 Lab Web/entregable-1/package-lock.json
 Lab Web/class_31_aug/yarn.lock
+Compiladores/Primer parcial/Presentaciones/*
+
+*.doc
+*.docx
+
+*.out
