--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,15 @@ Compiladores/Primer parcial/Presentaciones/*
 *.docx
 
 *.out
+Compiladores/Lex
+Compiladores/Lex2
+Compiladores/Lexico
+Compiladores/Primer parcial/Made by me/C/hw
+Compiladores/Primer parcial/Made by me/C/Lex2
+Compiladores/Primer parcial/Made by me/C/Lexico
+Compiladores/Primer parcial/Made by me/C/main
+Compiladores/Primer parcial/Made by me/Study/test1
+Compiladores/Lex
+Compiladores/Lex2
+Compiladores/Lexico
+Compiladores/Primer parcial/Made by me/C/Lex
